# deep_rl_robot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bumperbot_description/share/bumperbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/drl/lib/drl/: replay_buffer.py  train_model.py  utilities.py
install/drl/share/drl/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.bash  local_setup.dsv  (+4 more)
src/drl/: CMakeLists.txt  package.xml
src/drl/launch/: test_launch.py  train_launch.py
src/drl/scripts/: agent.py  constants.py  environment.py  main.py  models.py  subscribers.py  test.py  test_constants.py  utils.py
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: my_first_node.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: my_robot_gazebo.launch.py  my_robot_gazebo.launch.xml  robot_state_publisher.launch.py  spawn_robot.launch.py
src/my_robot_bringup/rviz/: urdf_config.rviz
src/my_robot_bringup/worlds/: robocon.world
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  gazebo.launch.py
src/my_robot_description/rviz/: urdf.config.rviz
src/my_robot_description/urdf/: bumper.urdf.xacro  bumper_gazebo.xacro  camera.xacro  imu.xacro  lidar.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
(+195 files in other folders)
